#424 set fixed width on displayBucket text for alignment

--- a/santa-fe/src/app/modules/structure/containers/structure-set-bulk-overrides-panel/structure-set-bulk-overrides-panel.container.scss
+++ b/santa-fe/src/app/modules/structure/containers/structure-set-bulk-overrides-panel/structure-set-bulk-overrides-panel.container.scss
@@ -142,6 +142,9 @@ $setBulkOverridesPanel_categoryList_cell_width: 3.5rem;
         color: $font_color_inverse;
       }
     }
+    &-text {
+      flex: 0 0 70%;
+    }
   }
   &--evenState {
     background-color: $color_blue_gray_1;
